--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rauri"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["https://github.com/ognrdrch"]
 description = "A minimal AUR helper for Arch Linux "
 license = "MIT"
 readme = "README.md"
-keywords = ["aur", "helper", "archlinux", "package-manager", "pacman", "arch", "aur helper"]
+keywords = ["aur", "helper", "archlinux", "package-manager","aurhelper"]
 categories = ["command-line-utilities", "development-tools"]
 repository = "https://github.com/ognrdrch/rauri"  
 
@@ -26,4 +26,9 @@ atty = "0.2"
 dirs = "5.0"
 urlencoding = "2.1"
 once_cell = "1.19"
+
+[package.metadata.arch]
+arch = ["x86_64"]
+makedepends = ["cargo", "rust"]
+depends = ["pacman", "git"]
 
